--- a/front/src/assets/styles/_home.scss
+++ b/front/src/assets/styles/_home.scss
@@ -11,7 +11,9 @@
     position: relative;
     height: 400px;
     max-height: 45vh;
-    flex: 1;
+    @media screen and (min-width: 768px) {
+        flex: 1;
+    }
 
     img {
         height: 100%;
