--- a/front/src/assets/styles/_sections.scss
+++ b/front/src/assets/styles/_sections.scss
@@ -24,3 +24,17 @@ section {
         margin: auto;
     }
 }
+
+.app-loading_section {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+
+    img {
+        width: 50px;
+        height: 50px;
+    }
+}
