:construction: wip detail view of housing

--- a/front/src/assets/styles/_forms.scss
+++ b/front/src/assets/styles/_forms.scss
@@ -45,9 +45,12 @@ button[type=submit], input[type=submit] {
     border: 0;
     background-color: $main_color;
     color: white;
-    
+
     &:focus {
         outline: none;
         border-color: $main_color;
     }
+}
+button:hover {
+    cursor: pointer;
 }
