Modifs details pages

--- a/front/src/assets/styles/style.scss
+++ b/front/src/assets/styles/style.scss
@@ -4,6 +4,8 @@
 @import './sections';
 @import './housing';
 @import './carousels';
+@import './detailsHousing';
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
 
 
 @import './home';
