--- a/api/templates/emails/registration.html.twig
+++ b/api/templates/emails/registration.html.twig
@@ -2,6 +2,6 @@
 <h1>Welcome {{ user.email }}!</h1>
 
 <p>
-    <a href="{{ token }}">Click here to activate your account</a> or copy and paste this link into your browser:
+    <a href="https://sancartonfix.mimso.net/confirm-account/{{ token }}">Click here to activate your account</a> or copy and paste this link into your browser:
     {{ token }}
 </p>
